--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "dcat/laravel-admin",
-    "description": "dcat admin",
+    "name": "jonexyz/laravel-dcat-admin",
+    "description": "derived from dcat-admin",
     "type": "library",
     "keywords": ["dcat", "laravel", "admin", "grid", "form", "laravel admin"],
     "homepage": "https://github.com/jqhph/dcat-admin",
     "license": "MIT",
     "authors": [
         {
-            "name": "jqh",
-            "email": "841324345@qq.com"
+            "name": "jone",
+            "email": "abc@jone.xyz"
         }
     ],
     "require": {
